Fix spacing på vurdere samboer

--- a/app/components/shared/aktivitet-vurdering-layout.css
+++ b/app/components/shared/aktivitet-vurdering-layout.css
@@ -20,6 +20,7 @@
 
   .main {
     border-right: 1px solid var(--ax-border-neutral-subtleA);
+    padding-right: var(--ax-space-20);
   }
 
   .details-divider {
